# ArcticTraining

./: .flake8  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Makefile  README.md  STYLE_GUIDE.md  arctic_text_to_sql_r1_prompt.py  arctic_training_cli.py  autocomplete_prompt.tmpl  cli.py  csv_to_huggingface_dataset.py  hatch_build.py  pyproject.toml
.github/: CODEOWNERS  repo_meta.yaml
.github/workflows/: docs.yaml  formatting.yaml  gpu_unit_tests.yaml  modal.yaml  semgroup.yaml  test.yaml  unit_tests.yaml  unit_tests_gpu.yaml
arctic_training/: __init__.py  cli.py  debug.py  deepspeed.py  entrypoint.py  exceptions.py  logging.py  metrics.py  monkey_patches.py  ray_launcher.py  register.py  registry.py  testing_utils.py  utils.py
arctic_training/arctic_rl_client/: __init__.py  client.py  config.py  weight_sync.py
arctic_training/callback/: __init__.py  callback.py  default.py  factory.py  logging.py  mixin.py  wandb.py
arctic_training/checkpoint/: __init__.py  checkpoint.py  ds_engine.py  engine.py  factory.py  hf_engine.py
arctic_training/config/: __init__.py  ac_sql_sft.yml  base.py  checkpoint.py  config.py  data.py  enums.py  experiment_tracking.py  logger.py  model.py  on_policy_distillation.py  optimizer.py  scheduler.py  tokenizer.py  trainer.py  utils.py  wandb.py
arctic_training/data/: __init__.py  causal_factory.py  chat_markers.py  dpo_factory.py  factory.py  hf_causal_source.py  hf_input_output_source.py  hf_instruct_source.py  hf_source.py  loader.py  on_policy_distillation_factory.py  sft_factory.py  sft_loader.py  sft_source.py  sft_utils.py  snowflake_source.py  source.py  utils.py
arctic_training/debug/: underflow_overflow.py  utils.py
arctic_training/experiment_tracking/: snowflake_tracker.py  tracker.py  wandb_tracker.py
arctic_training/launcher/: ray_launcher.py
arctic_training/model/: __init__.py  factory.py  hf_factory.py  liger_factory.py  optimizer.py  tiled_compute.py
arctic_training/op_builder/: __init__.py  builder.py  comm.py  moe_ops.py
arctic_training/optimizer/: __init__.py  adam_factory.py  factory.py
arctic_training/registry/: __init__.py  checkpoint.py  data.py  model.py  optimizer.py  scheduler.py  tokenizer.py  trainer.py  utils.py
arctic_training/rl_client/: __init__.py  client.py  config.py  weight_sync.py
arctic_training/scheduler/: __init__.py  factory.py  hf_factory.py  wsd_factory.py
arctic_training/synth/: __init__.py  base_caller.py  callers.py  cli.py  openai_callers.py  test_cortex_caller.py  test_multi_replica_vllm_caller.py  test_openai_callers.py  test_vllm_caller.py  utils.py  vllm_callers.py  vllm_utils.py
arctic_training/tokenizer/: __init__.py  factory.py  hf_factory.py
arctic_training/trainer/: __init__.py  causal_trainer.py  dpo_trainer.py  flops_counter.py  moe_trainer.py  on_policy_distillation_trainer.py  parallel_groups.py  parallel_state.py  sft_trainer.py  simple_parallel_state.py  sp_parallel_state.py  teacher_client.py  trainer.py  utils.py
artic_training/: __init__.py
artic_training/callback/: __init__.py  callback.py
artic_training/checkpoint/: __init__.py  ds_engine.py  hf_engine.py
artic_training/config/: checkpoint.py  config.py  data.py  enums.py  model.py  wandb.py
artic_training/data/: __init__.py  factory.py  loader.py  sft_loader.py
artic_training/model/: __init__.py  factory.py
artic_training/optimizer/: factory.py
artic_training/trainer/: __init__.py  factory.py  trainer.py
ci/: gpu-unit-tests.py  gpu_unit_tests.py  torch_latest.py
docs/: callbacks.rst  checkpoint.rst  conf.py  config.rst  data.rst  debug.rst  fim_training.md  index.rst  install.rst  model.rst  optimizer.rst  quick-start.rst  requirements.txt  scheduler.rst  tokenizer.rst  trainer.rst  usage.rst
examples/: dpo.yaml
exp_scripts/: swiftkv_llama33_6144_emb6144_proj6144_sum_lstm_3_tie_embs.sh  train_gens.py
exp_scripts/data_gen/: data_gens.py
news/: qwen3-32b-dgx-station.md  qwen3-32b-sl166k-dgx-station.md
news/qwen3-32b-dgx-station/: run-qwen3-32b.sh  run-qwen3-32b.yml
news/qwen3-32b-sl166k-dgx-station/: run-qwen3-32b.sh  run-qwen3-32b.yml
projects/arctic_lstm_speculator/: README.md  llama3.1-70b.yaml  llama3.1-8b.yaml  llama3.3-70b.yaml  oss-120b.yaml  oss-20b.yaml  qwen2.5-32b.yaml  train.py
projects/arctic_moe/: README.md
projects/arctic_text2sql_r1/: README.md  infer.py  modelcard.md
projects/arctic_text2sql_r1_training/: README.md  evaluate_models.py  grpo-qwen-3b.yaml  grpo_trainer.py  grpo_trainer_colab.py  requirements.txt  train.py
projects/basic/: README.md  run-causal.yml
projects/causal_snowflake/: README.md  run-causal-snowflake-dataset.yml  run-causal-snowflake-sql.yml  run-causal-snowflake-table.yml  setup_snowflake.py
projects/dpo/: README.md  dpo-llama-8b.yaml  environment.yaml
projects/excot_dpo/: README.md  dpo-llama-8b.yaml  dpo-llama-8b_debug.yaml  sft-llama-8b.yaml
projects/mlp_speculator/: create_datasets.py  llama-8b.yaml  node-setup.sh  pair-wise.py  run-70b-swiftkv.sh  run-70b-synth-data.sh  run-70b.sh  run-8b-checkpoint-save.sh  run-8b-gen-train.sh  run-8b-input-distribution.sh  run-8b-local-data.sh  run-8b-synth-data.sh  run-8b.sh  run-llama3.3-70b.sh  run.sh  train.py  train_speculator.py
projects/mlp_variant_speculator/: README.md  llama3.1-70b.yaml  llama3.1-8b.yaml  llama3.3-70b.yaml  multigpu_runner.py  qwen2.5-32b.yaml  train.py
projects/moba_attention/: eval.py  moba-swiftkv-llama-8b.yaml  run_eval.sh  run_training.sh  train.py
projects/on_policy_distillation/: README.md  distill-qwen3.yaml
projects/sequence-parallelism/: INTEGRATION.md  README.md  USAGE.md  run-h100-sp1-llama-8b-baseline.yml  run-h100-sp1-llama-8b.yml  run-h100-sp1-qwen3-32b.yml  run-h100-sp16-llama-70b.yml  run-h100-sp16-llama-8b.yml  run-h100-sp16-qwen3-32b.yml  run-h100-sp32-llama-70b.yml  (+38 more)
release/: release.sh
scripts/: check_license.py  download_data.py  install_deps.py  upgrade_user_code.py  upload.py
test_scripts/: data_factory.py  sft_trainer.py
tests/: conftest.py  helpers.py  pytest.ini  test_helpers.py  test_registry.py
(+405 files in other folders)
