[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/snowflakedb/ArcticTraining"
Issues = "https://github.com/snowflakedb/ArcticTraining/issues"

[project]
name = "arctic_training"
version = "0.0.2"
description = "Snowflake LLM training library"
authors = [
    {author = "Michael Wyatt", email = "michael.wyatt@snowflake.com"},
    {author = "Jeff Rasley", email = "jeff.rasley@snowflake.com"},
    {author = "Zhewei Yao", email = "zhewei.yao@snowflake.com"},
    {author = "Samyam Rajbhandari", email = "samyam.rajbhandari@snowflake.com"},
    {author = "Aurick Qiao", email = "aurick.qiao@snowflake.com"},
    {author = "Canwen Xu", email = "canwen.xu@snowflake.com"}
]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
homepage = "https://github.com/snowflakedb/ArcticTraining"
repository = "https://github.com/snowflakedb/ArcticTraining"
keywords = ["llm", "training"]

# Dependencies for the project
dependencies = [
    "datasets",
    "deepspeed",
    "devtools",
    "jsonlines",
    "loguru",
    "openai>=1.48.0",
    "peft",
    "psutil",
    "pydantic>=2.0",
    "tabulate",
    "torch",
    "tqdm",
    "transformers>=4.49.0", # XXX: needs to be "transformers>4.50.0" once it's released
    "wandb",
]

# Optional development dependencies
[project.optional-dependencies]
all = [
    "arctic_training[dev]",
    "arctic_training[docs]",
    "arctic_training[testing]",
    "arctic_training[vllm]",
    "arctic_training[cortex]",
]

dev = [
    "arctic_training[docs]",
    "arctic_training[formatting]",
    "arctic_training[testing]",
    "pynvml",
]

testing = [
    "pytest",
    "pytest-instafail",
]

formatting = [
    "pre-commit",
]

docs = [
    "autodoc_pydantic>=2.0.0",
    "pydantic>=2.0",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
]

vllm = [
    "vllm==0.6.2",
]

cortex = [
    "snowflake-connector-python==3.12.3",
]

[project.scripts]
arctic_training = "arctic_training.cli:main"
arctic_training_run = "arctic_training.cli:run_script"
arctic_synth = "arctic_training.synth:main"
